--- a/energy-consumption-per-village/src/main/resources/application.properties
+++ b/energy-consumption-per-village/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+# MySQL database URL
 
+spring.datasource.uri=jdbc:mysql://localhost:3306/energyConsumptionDB
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=none
+#spring.data.datasource.uri=jdbc:mysql://mysql:3306/EnergyConsumptionDB
