--- a/energy-consumption-per-village/src/main/resources/application.properties
+++ b/energy-consumption-per-village/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 # MySQL database URL
 spring.datasource.uri=jdbc:mysql://localhost:3306/energyConsumptionDB
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+logging.level.org.springframework=info
