implemented report method and added unit test for counter controller

--- a/energy-consumption-per-village/kubernetes/energy-consumption-app-deployment.yml
+++ b/energy-consumption-per-village/kubernetes/energy-consumption-app-deployment.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: energy-consumption-app
-          build: .
+          image: energy-consumption-app:v1
           resources:
             limits:
               memory: "200Mi"
