--- a/energy-consumption-per-village/kubernetes/mysqldb-deployment.yml
+++ b/energy-consumption-per-village/kubernetes/mysqldb-deployment.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: energy-consumption-mysql
-          image: mysql
+          image: mysql:5.5
           ports:
           - name: mysql
             containerPort: 3306
