--- a/energy-consumption-per-village/kubernetes/mysqldb-deployment.yml
+++ b/energy-consumption-per-village/kubernetes/mysqldb-deployment.yml
@@ -15,8 +15,11 @@ spec:
       containers:
         - name: energy-consumption-mysql
           image: mysql:5.5
+          volumeMounts:
+          - name: mysql-storage
+            mountPath: /data/db
           ports:
-          - name: mysql
+          - name: energy-consumption-mysql
             containerPort: 3306
           resources:
            requests:
@@ -34,3 +37,6 @@ spec:
             initialDelaySeconds: 5
             periodSeconds: 2
             timeoutSeconds: 1
+       volumes:
+       - name: mysql-storage
+        emptyDir: {}
