--- a/energy-consumption-per-village/src/main/resources/application.properties
+++ b/energy-consumption-per-village/src/main/resources/application.properties
@@ -1,3 +1,16 @@
+#Common properties related to all the environments will come here
+
+#info about our application
+info.application.name=
+info.application.description=
+info.application.version=
+
+
+#actuator
+management.endpoints.web.exposure.include=*
+management.edbpoint.health.show-details=when_authorized
+
+
 # MySQL database URL
 spring.datasource.uri=jdbc:mysql://energy-consumption-mysql-service:3306/energyConsumptionDB
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
