added integration test for countercontroller

--- a/energy-consumption-per-village/src/main/resources/application.properties
+++ b/energy-consumption-per-village/src/main/resources/application.properties
@@ -14,4 +14,6 @@ management.edbpoint.health.show-details=when_authorized
 # MySQL database URL
 spring.datasource.uri=jdbc:mysql://energy-consumption-mysql-service:3306/energyConsumptionDB
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
 logging.level.org.springframework=info
+logging.level.com.baeldung.testloglevel=DEBUG
