--- a/energy-consumption-per-village/kubernetes/energy-consumption-app-deployment.yml
+++ b/energy-consumption-per-village/kubernetes/energy-consumption-app-deployment.yml
@@ -15,22 +15,23 @@ spec:
       containers:
         - name: energy-consumption-app
           image: energy-consumption-app:v1
+          ports:
+          - containerPort: 8080
           resources:
             limits:
               memory: "200Mi"
             requests:
               memory: "100Mi"
-          readinessProbe:
+          readinessProbe: # know when a container is ready to start accepting traffic
             httpGet:
               path: /health
-              port: 80
+              port: 8080
             initialDealySeconds: 5
             timeoutSeconds: 1
-          livenessProbe:
+          livenessProbe: # periodic check to make sure container is healthy
             httpGet:
               path: /health
-              port: 80
-            initialDelaySeconds: 5
+              port: 8080
+            initialDelaySeconds: 5 # length of time to wait for a pod to initialize
+            periodSeconds: 2 # How often (in seconds) to perform the probe
             timeoutSeconds: 1
-          ports:
-            - containerPort: 8080
