--- a/energy-consumption-per-village/src/main/resources/application.properties
+++ b/energy-consumption-per-village/src/main/resources/application.properties
@@ -7,13 +7,14 @@ info.application.version=
 
 
 #actuator
-management.endpoints.web.exposure.include=*
-management.edbpoint.health.show-details=when_authorized
+management.endpoints.web.exposure.include = *
+management.edbpoint.health.show-details = when_authorized
 
 
 # MySQL database URL
-spring.datasource.uri=jdbc:mysql://energy-consumption-mysql-service:3306/energyConsumptionDB
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.uri = jdbc:mysql://energy-consumption-mysql-service:3306/energyConsumptionDB
+spring.datasource.driver-class-name = com.mysql.jdbc.Driver
+spring.jpa.show-sql = true
 
-logging.level.org.springframework=info
-logging.level.com.baeldung.testloglevel=DEBUG
+logging.level.org.springframework = info
+logging.level.com.baeldung.testloglevel = DEBUG
